<resources>
    <string name="app_name">ATM Consultoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ATM Consultoria</string>
    <string name="nav_header_subtitle">atm@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="servicos">Serviços</string>
    <string name="clientes">Clientes</string>
    <string name="contato">Contato</string>
    <string name="sobre">Sobre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="contact">Contatos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sobre_nos">Sobre nós</string>
</resources>