<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="primeiro.cliente.atmconsultoria.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_work"
        android:name="primeiro.cliente.atmconsultoria.ui.work.WorkFragment"
        android:label="@string/servicos"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_clients"
        android:name="primeiro.cliente.atmconsultoria.ui.clients.ClietsFragment"
        android:label="@string/clientes"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_contato"
        android:name="primeiro.cliente.atmconsultoria.ui.contact.ContactFragment"
        android:label="@string/contact"
        tools:layout="@layout/fragment_contact"/>

    <fragment
        android:id="@+id/nav_sobre"
        android:name="primeiro.cliente.atmconsultoria.ui.about.AboutFragment"
        android:label="@string/sobre"
        tools:layout="@layout/fragment_about"/>
</navigation>